# ternary-cnn-cpu-kernel

./: .gitignore  README.md  RESULTS.md
Question/: assignment.txt
part_A/: resnet20.py  results.json  ternary_layer.py  train.py
part_B/: CMakeLists.txt  README.md  autotune.py  autotune_results.json  convert_weights.py
part_B/include/: layers.h  model.h  resnet20.h  tensor.h  ternary_kernel.h  ternary_kernel_tl.h
part_B/src/: layers.cpp  main.cpp  model.cpp  resnet20.cpp  tensor.cpp  ternary_kernel.cpp  ternary_kernel_tl.cpp
part_C/: benchmark_int8_vs_cpp.py  benchmark_onnx.py  benchmark_pytorch.py  benchmark_static_int8_vs_cpp.py  export_onnx.py  results.json  results_int8_vs_cpp.json  results_onnx.json  results_onnx_single_core.json  results_static_int8_vs_cpp.json
